updates to tag stylings rounded corners shadings fixed missing background

--- a/themes/Bluebird/nyss_skin/tags/partials/_tag.scss
+++ b/themes/Bluebird/nyss_skin/tags/partials/_tag.scss
@@ -72,11 +72,15 @@ dt {
       // background-color:#DEDEDE;
     }
   }
-  &.shaded .name {
+}
+dt.shaded {
+  .name {
     font-weight:bold;
   }
 }
-
+dt.shadedChildren {
+  @include inset-shadow(3px,-1px,6px,.15);
+}
 dt {
   height:20px;
 }
